force-app/main/default/objects/DG_Service_Approval_Process__mdt.object
<CustomObject>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>SectHead_AUTH_APP</fullName>
                </value>
                <value>
                    <fullName>SectHead_AUTH_INFRA</fullName>
                </value>
                <value>
                    <fullName>SectHead_AUTH_INFRA_SPE</fullName>
                </value>
                <value>
                    <fullName>SectHead_AUTH_SAP</fullName>
                </value>
                <value>
                    <fullName>SectHead_HW</fullName>
                </value>
                <value>
                    <fullName>SectHead_HW_NON</fullName>
                </value>
                <value>
                    <fullName>SectHead_PROJ</fullName>
                </value>
                <value>
                    <fullName>SectHead_STAT</fullName>
                </value>
                <value>
                    <fullName>SectHead_STAT_NON</fullName>
                </value>
                <value>
                    <fullName>SectHead_SW</fullName>
                </value>
                <value>
                    <fullName>SectHead_SW_NON</fullName>
                </value>
                <value>
                    <fullName>Staff_AUTH_APP</fullName>
                </value>
                <value>
                    <fullName>Staff_AUTH_INFRA</fullName>
                </value>
                <value>
                    <fullName>Staff_AUTH_INFRA_SPE</fullName>
                </value>
                <value>
                    <fullName>Staff_AUTH_SAP</fullName>
                </value>
                <value>
                    <fullName>Staff_HW</fullName>
                </value>
                <value>
                    <fullName>Staff_HW_NON</fullName>
                </value>
                <value>
                    <fullName>Staff_PROJ</fullName>
                </value>
                <value>
                    <fullName>Staff_STAT</fullName>
                </value>
                <value>
                    <fullName>Staff_STAT_NON</fullName>
                </value>
                <value>
                    <fullName>Staff_SW</fullName>
                </value>
                <value>
                    <fullName>Staff_SW_NON</fullName>
                </value>
                <value>
                    <fullName>VP_AUTH_APP</fullName>
                </value>
                <value>
                    <fullName>VP_AUTH_INFRA</fullName>
                </value>
                <value>
                    <fullName>VP_AUTH_INFRA_SPE</fullName>
                </value>
                <value>
                    <fullName>VP_AUTH_SAP</fullName>
                </value>
                <value>
                    <fullName>VP_HW</fullName>
                </value>
                <value>
                    <fullName>VP_HW_NON</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>DG Check Price</fullName>
                </value>
                <value>
                    <fullName>Waiting for Manager Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for Auth Focal Point Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for VP Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for DG Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for DGVP Approval</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Waiting for BPF Approval</fullName>
                    <isActive>false</isActive>
                    <label>Waiting for BPF Approval</label>
                </value>
                <value>
                    <fullName>Waiting for CAB Approval</fullName>
                    <isActive>false</isActive>
                    <label>Waiting for CAB Approval</label>
                </value>
                <value>
                    <fullName>Waiting for Change Co Approval</fullName>
                    <isActive>false</isActive>
                    <label>Waiting for Change Co Approval</label>
                </value>
                <value>
                    <fullName>Waiting for ECAB Approval</fullName>
                    <isActive>false</isActive>
                    <label>Waiting for ECAB Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <label>Queue</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Type__c</fullName>
        <label>Requester Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Staff</fullName>
                    <default>true</default>
                    <label>Staff</label>
                </value>
                <value>
                    <fullName>Section Head</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>DG Service: Approval Process</label>
</CustomObject>